--- a/packages/lego-bricks/src/components/Card/Card.module.css
+++ b/packages/lego-bricks/src/components/Card/Card.module.css
@@ -4,10 +4,19 @@
   border-radius: var(--border-radius-lg);
 }
 
+.withIcon {
+  gap: var(--spacing-md);
+
+  @media (max-width: 992px) {
+    flex-direction: column;
+    gap: var(--spacing-sm);
+  }
+}
+
 .header {
   font-weight: 600;
   font-size: var(--font-size-lg);
-  line-height: 1.3;
+  margin-bottom: var(--spacing-sm);
 }
 
 .shadow {
